===== Fixed
- Fix {pull}2526[#2526]

[float]
[[unreleased]]
==== Unreleased
////

[[release-notes-3.x]]
=== Ruby Agent version 3.x

[float]
[[unreleased]]
==== Unreleased

[float]
===== Fixed

- Handle invalid utf-8 byte sequences in sql summarizer and DB statement {pull}896[#896]

[float]
===== Added

- Support both integer and string log levels, and extra central config values {pull}902[#902]

[[release-notes-3.12.1]]
==== 3.12.1 (2020-11-16)

[float]
===== Fixed

- `capture_elasticsearch_queries` no longer modifies the original query {pull}894[#894]

[[release-notes-3.12.0]]
==== 3.12.0 (2020-11-10)

[float]
===== Added

- Add outcome to transactions and spans {pull}883[#883]

[[release-notes-3.11.1]]
==== 3.11.1 (2020-11-05)

[float]
===== Fixed

- Fix reporting from Kubernetes based deploys to APM Server 7.9.x {pull}885[#885]

[[release-notes-3.11.0]]
==== 3.11.0 (2020-10-27)

[float]
===== Added

- Add and read sampling info from Tracestate headers {pull}858[#858]
- Add information about cloud hosting environment if available {pull}871[#871]

[float]
===== Changed

- Align the default value of `sanitize_field_names` with other agents {pull}867[#867]
- Ensure max 4 digits of precision for `sample_rate` as per agent spec {pull}880[#880]

[float]
===== Fixed

- Fix Delayed::Job class names when used through ActiveJob {pull}869[#869]
- Fix Delayed::Job when run without the agent running {pull}874[#874]
- Fix Kubernetes related metadata {pull}882[#882]

[[release-notes-3.10.1]]
==== 3.10.1 (2020-08-26)

[float]
===== Fixed

- Remove secrets from cookies in errors {pull}863[#863]
- Silence deprecation warning when setting `ignore_url_patterns` to default {pull}865[#865]

[[release-notes-3.10.0]]
==== 3.10.0 (2020-08-26)

[float]
===== Added

- Config option `transaction_ignore_urls` to replace `ignore_url_patterns` {pull}844[#844]
- Prepend `(?-i)` to patterns to make them case-sensitive {pull}846[#846]

[float]
===== Fixed

- Reverted {pull}839[#839]